; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/pwm/extr_pwmbus.c_pwmbus_hinted_child.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/pwm/extr_pwmbus.c_pwmbus_hinted_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pwmbus_ivars = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"channel\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*, i32)* @pwmbus_hinted_child to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pwmbus_hinted_child(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.pwmbus_ivars*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @pwmbus_add_child(i32 %9, i32 0, i8* %10, i32 %11)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = call %struct.pwmbus_ivars* @device_get_ivars(i32 %13)
  store %struct.pwmbus_ivars* %14, %struct.pwmbus_ivars** %7, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.pwmbus_ivars*, %struct.pwmbus_ivars** %7, align 8
  %18 = getelementptr inbounds %struct.pwmbus_ivars, %struct.pwmbus_ivars* %17, i32 0, i32 0
  %19 = call i32 @resource_int_value(i8* %15, i32 %16, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32* %18)
  ret void
}

declare dso_local i32 @pwmbus_add_child(i32, i32, i8*, i32) #1

declare dso_local %struct.pwmbus_ivars* @device_get_ivars(i32) #1

declare dso_local i32 @resource_int_value(i8*, i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
